--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
             </ul>
 
             <ul class="header-social">
+            <li><a href="tel:+27 60 525 06745"><i class="fas fa-phone"></i> Call Us</a></li>
+            <li><a href="mailto:your.mslets6040@gmail.com"><i class="fas fa-envelope"></i> Email Us</a></li>
+            <li><a href="https://www.linkedin.com/in/mslets97"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+            <li><a href="https://youtube.com/@Cyber_with_MSLets"><i class="fab fa-youtube"></i> YouTube</a></li>
+        
+
                 <li><a href="#0"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
                 <li><a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                 <li><a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i></a></li>
