--- a/index.html
+++ b/index.html
@@ -1003,9 +1003,10 @@
             <div class="column large-7 medium-full contact-social">
                 <h4>Social</h4>
                 <ul>
-                    <li><a href="#0" title="Facebook">Facebook</a></li>
-                    <li><a href="#0" title="Twitter">Twitter</a></li>
-                    <li><a href="#0" title="Instagram">Instagram</a></li>
+            <li><a href="tel:+27 60 525 06745"><i class="fas fa-phone"></i></a></li>
+            <li><a href="mailto:your.mslets6040@gmail.com"><i class="fas fa-envelope"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/mslets97"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://youtube.com/@Cyber_with_MSLets"><i class="fab fa-youtube"></i></a></li>
                 </ul>
             </div>
 
