--- a/index.html
+++ b/index.html
@@ -996,17 +996,18 @@
         <div class="row contact-infos" data-aos="fade-up" data-aos-anchor=".contact-main">
 
             <div class="column large-5 medium-full contact-phone">
-                <h4>Call Me</h4>
-                <a href="tel:+27 60 525 06745">+27 60 525 06745</a>
+                <h4>Contact Me</h4>
+                <ul>
+                <li><a href="tel:+27 60 525 06745"><i class="fas fa-phone"></i>Call Me</a></li>
+                <li><a href="mailto:your.mslets6040@gmail.com"><i class="fas fa-envelope"></i>Email Me</a></li>
+                </ul>
             </div>
 
             <div class="column large-7 medium-full contact-social">
                 <h4>Social</h4>
                 <ul>
-            <li><a href="tel:+27 60 525 06745"><i class="fas fa-phone"></i></a></li>
-            <li><a href="mailto:your.mslets6040@gmail.com"><i class="fas fa-envelope"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/mslets97"><i class="fab fa-linkedin"></i></a></li>
-            <li><a href="https://youtube.com/@Cyber_with_MSLets"><i class="fab fa-youtube"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/mslets97"><i class="fab fa-linkedin"></i>LinkedIn</a></li>
+            <li><a href="https://youtube.com/@Cyber_with_MSLets"><i class="fab fa-youtube"></i>YouTube</a></li>
                 </ul>
             </div>
 
