--- a/index.html
+++ b/index.html
@@ -987,15 +987,14 @@
                 <p class="section-desc">
                 I'm excited to connect and ready to dive into action. Let's collaborate to craft something extraordinary, 
                     turning your ideas into exceptional products that stand out. I'm prepared to contribute my skills and 
-                    expertise to your team, and together, we can create remarkable solutions. Email Me.
-                <a href="mailto:mslets@gmail.com">Email Me</a>.
+                    expertise to your team, and together, we can create remarkable solutions. Please get in touch.
                 </p>
             </div>
         </div>
 
         <div class="row contact-infos" data-aos="fade-up" data-aos-anchor=".contact-main">
 
-            <div class="column large-5 medium-full contact-phone">
+            <div class="column large-7 medium-full contact-phone">
                 <h4>Contact Me</h4>
                 <ul>
                 <li><a href="tel:+27 60 525 06745"><i class="fas fa-phone"></i>Call Me</a></li>
