--- a/index.html
+++ b/index.html
@@ -979,11 +979,8 @@
         </div>
 
         <div class="row contact-main" data-aos="fade-up">
-            <div class="column large-full">
-                <p class="contact-email">
-                    <a href="mailto:mslets@gmail.com"">mslets6040@gmail.com</a>
-                </p>
-
+            <div>
+                
                 <p class="section-desc">
                 I'm excited to connect and ready to dive into action. Let's collaborate to craft something extraordinary, 
                     turning your ideas into exceptional products that stand out. I'm prepared to contribute my skills and 
