--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
 
             <div class="column item-service" data-aos="fade-up">
                 <div class="item-service__content">
-                    <h4 class="item-title">System Administrator Home Lab 2</h4>
+                    <h4 class="item-title">System Administrator Home Lab 1</h4>
                     <p>
                         Performed the following tasks: Active Directory Administration on Server 2019: PowerShell: Automated 
                         provision, maintaining, and deprovisioning user accounts. Implementation and management of Group 
@@ -583,8 +583,7 @@
                         Performed the following tasks: For Penetration Test Reports and Python Projects Implemented Vulnerability Management
                         Function on sandbox nextworks: Discover, Prioritize, Assess, Report, Remediate, Verify Conducted vulnerability assessments 
                         with Nessus; remediated vulnerabilities Performed penetration tests on VulnHub and HackTheBox using the high-level assessment 
-                        methodology described by NIST 800-115. (See github.com/jtech.io for full reports) Experience using nmap in conjunction with bash 
-                        and python scripting to automate the fingerprinting phases of security assessments and pen tests.
+                        methodology described by NIST 800-115. 
 
                     </p>
                 </div>
