--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
                                 <img src="images\portfolio\gallery\AZ-900.png"
                                      srcset="images\portfolio\gallery\AZ-900.png 1x, images\portfolio\gallery\AZ-900.png 2x" alt="">
                             </a>
-                            <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://www.credly.com/badges/5366cfd4-6587-46fd-9df6-c5afaa4fe10e/public_url" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
@@ -707,7 +707,7 @@
                             </p>
                         </div>
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>This badge was issued to Samson Matome Letsoalo on December 14, 2022.</p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
@@ -719,7 +719,7 @@
                                 <img src="images\portfolio\gallery\AZ-700.png" 
                                      srcset="images\portfolio\gallery\AZ-700.png 1x, images\portfolio\gallery\AZ-700.png 2x" alt="">
                             </a>
-                            <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://www.credly.com/badges/0b3a1f11-df5a-43e1-81da-728d97e53305/public_url" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
@@ -730,7 +730,7 @@
                             </p>
                         </div>
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>This badge was issued to Samson Matome Letsoalo on February 14, 2023 Expires on February 14, 2024</p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
@@ -743,7 +743,7 @@
                                 <img src="images\portfolio\gallery\SC-200.png" 
                                      srcset="images\portfolio\gallery\SC-200.png 1x, images\portfolio\gallery\SC-200.png 2x" alt="">
                             </a>
-                            <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://www.credly.com/badges/7c7b98f1-981a-4225-8170-8900c867193e/public_url" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
@@ -754,7 +754,7 @@
                             </p>
                         </div>
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>This badge was issued to Samson Matome Letsoalo on February 14, 2023  Expires on February 14, 2024</p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
@@ -767,7 +767,7 @@
                                 <img src="images\portfolio\gallery\SC-100.png"
                                      srcset="images\portfolio\gallery\SC-100.png 1x, images\portfolio\gallery\SC-100.png 2x" alt="">
                             </a>
-                            <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://www.credly.com/badges/a951f02d-0f2b-4a88-9fbf-041ed3c326f8/public_url" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
@@ -778,7 +778,7 @@
                             </p>
                         </div>
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>This badge was issued to Samson Matome Letsoalo on February 28, 2023  Expires on February 28, 2024</p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
@@ -802,7 +802,7 @@
                             </p>
                         </div>
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>This badge was issued to Samson Matome Letsoalo on August 2, 2023  Expires on August 2, 2025.</p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
@@ -827,7 +827,7 @@
                             </p>
                         </div>
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>This badge was issued to Samson Matome Letsoalo on August 13, 2023  Expires on August 13, 2025.</p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
@@ -852,7 +852,7 @@
                             </p>
                         </div>
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>This badge was issued to Samson Matome Letsoalo on August 3, 2023.</p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
@@ -879,7 +879,7 @@
                             </p>
                         </div>
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>This badge was issued to Samson Matome Letsoalo on August 3, 2023.</p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
@@ -906,20 +906,20 @@
                     <strong>CSS3</strong>
                     </li>
                     <li>
-                    <div class="progress percent70"><span>70%</span></div>
-                    <strong>JQuery</strong>
+                    <div class="progress percent70"><span>60%</span></div>
+                    <strong>KQL</strong>
                     </li>
                     <li>
-                    <div class="progress percent95"><span>95%</span></div>
-                    <strong>PHP</strong>
+                    <div class="progress percent95"><span>65%</span></div>
+                    <strong>Python</strong>
                     </li>
                     <li>
-                    <div class="progress percent75"><span>75%</span></div>
-                    <strong>Wordpress</strong>
+                    <div class="progress percent75"><span>55%</span></div>
+                    <strong>Powershell</strong>
                     </li>
                     <li>
-                    <div class="progress percent90"><span>90%</span></div>
-                    <strong>Angular JS</strong>
+                    <div class="progress percent90"><span>65%</span></div>
+                    <strong>Command Prompt CMD</strong>
                     </li>
                 </ul>
 
@@ -981,7 +981,7 @@
             <div>
                 
                 <p class="section-desc">
-                I'm excited to connect and ready to dive into action. Let's collaborate to craft something extraordinary, 
+                    I'm excited to connect and ready to dive into action. Let's collaborate to craft something extraordinary, 
                     turning your ideas into exceptional products that stand out. I'm prepared to contribute my skills and 
                     expertise to your team, and together, we can create remarkable solutions. Please get in touch.
                 </p>
