--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                                 <img src="images\portfolio\gallery\(ISC)² Candidate.png" 
                                      srcset="images\portfolio\gallery\(ISC)² Candidate.png 1x, images\portfolio\gallery\(ISC)² Candidate.png 2x" alt="">
                             </a>    
-                            <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://www.behance.net/" class="item-folio__project-link" title="Credly" target="_blank"></a>
                         </div>
     
                         <div class="item-folio__text">
@@ -672,7 +672,7 @@
                                 <img src="images\portfolio\gallery\(ISC)² CC.png" 
                                      srcset="images\portfolio\gallery\(ISC)² CC.png 1x, images\portfolio\gallery\(ISC)² CC.png 2x" alt="">
                             </a>
-                            <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://www.behance.net/" class="item-folio__project-link" title="Credly" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
@@ -696,7 +696,7 @@
                                 <img src="images\portfolio\gallery\AZ-900.png"
                                      srcset="images\portfolio\gallery\AZ-900.png 1x, images\portfolio\gallery\AZ-900.png 2x" alt="">
                             </a>
-                            <a href="https://www.credly.com/badges/5366cfd4-6587-46fd-9df6-c5afaa4fe10e/public_url" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://www.credly.com/badges/5366cfd4-6587-46fd-9df6-c5afaa4fe10e/public_url" class="item-folio__project-link" title="Credly" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
@@ -719,7 +719,7 @@
                                 <img src="images\portfolio\gallery\AZ-700.png" 
                                      srcset="images\portfolio\gallery\AZ-700.png 1x, images\portfolio\gallery\AZ-700.png 2x" alt="">
                             </a>
-                            <a href="https://www.credly.com/badges/0b3a1f11-df5a-43e1-81da-728d97e53305/public_url" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://www.credly.com/badges/0b3a1f11-df5a-43e1-81da-728d97e53305/public_url" class="item-folio__project-link" title="Credly" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
@@ -743,7 +743,7 @@
                                 <img src="images\portfolio\gallery\SC-200.png" 
                                      srcset="images\portfolio\gallery\SC-200.png 1x, images\portfolio\gallery\SC-200.png 2x" alt="">
                             </a>
-                            <a href="https://www.credly.com/badges/7c7b98f1-981a-4225-8170-8900c867193e/public_url" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://www.credly.com/badges/7c7b98f1-981a-4225-8170-8900c867193e/public_url" class="item-folio__project-link" title="Credly" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
@@ -767,7 +767,7 @@
                                 <img src="images\portfolio\gallery\SC-100.png"
                                      srcset="images\portfolio\gallery\SC-100.png 1x, images\portfolio\gallery\SC-100.png 2x" alt="">
                             </a>
-                            <a href="https://www.credly.com/badges/a951f02d-0f2b-4a88-9fbf-041ed3c326f8/public_url" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://www.credly.com/badges/a951f02d-0f2b-4a88-9fbf-041ed3c326f8/public_url" class="item-folio__project-link" title="Credly" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
@@ -789,9 +789,9 @@
                         <div class="item-folio__thumb">
                             <a href="images\portfolio\gallery\NSE 1.png" class="thumb-link" title="Palmeira" data-size="1050x700">
                                 <img src="images\portfolio\gallery\NSE 1.png"
-                                     srcset="images\portfolio\gallery\NSE 1.png 1x, images\portfolio\gallery\NSE 2.png 2x" alt="">
+                                     srcset="images\portfolio\gallery\NSE 1.png 1x, images\portfolio\gallery\NSE 1.png 2x" alt="">
                             </a>
-                            <a href="https://drive.google.com/file/d/1pJrDdMl8Oo07osn4b_C7FlG71FVVYRJW/view?usp=sharing" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://drive.google.com/file/d/1pJrDdMl8Oo07osn4b_C7FlG71FVVYRJW/view?usp=sharing" class="item-folio__project-link" title="Google Drive" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
@@ -816,7 +816,7 @@
                                 <img src="images\portfolio\gallery\NSE 2.png"
                                      srcset="images\portfolio\gallery\NSE 2.png 1x, images\portfolio\gallery\NSE 2.png 2x" alt="">
                             </a>
-                            <a href="https://drive.google.com/file/d/1kbgVWkteAse6I94PLFxJQNbTlek7zOwT/view?usp=sharing" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://drive.google.com/file/d/1kbgVWkteAse6I94PLFxJQNbTlek7zOwT/view?usp=sharing" class="item-folio__project-link" title="Google Drive" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
@@ -841,7 +841,7 @@
                                 <img src="images\portfolio\gallery\qualys.jpg"
                                      srcset="images\portfolio\gallery\qualys.jpg 1x, images\portfolio\gallery\qualys.jpg 2x" alt="">
                             </a>
-                            <a href="https://drive.google.com/file/d/1RpPY87z5fsAE0aT_NZMAycJsD-m2DZir/view?usp=sharing" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://drive.google.com/file/d/1RpPY87z5fsAE0aT_NZMAycJsD-m2DZir/view?usp=sharing" class="item-folio__project-link" title="Google Drive" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
@@ -868,7 +868,7 @@
                                 <img src="images\portfolio\gallery\EHE.jpg"
                                      srcset="images\portfolio\gallery\EHE.jpg 1x, images\portfolio\gallery\EHE.jpg 2x" alt="">
                             </a>
-                            <a href="https://drive.google.com/file/d/1gSZ9hWx_zo1qspgH3olJerL09GncfnOD/view?usp=sharing" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://drive.google.com/file/d/1gSZ9hWx_zo1qspgH3olJerL09GncfnOD/view?usp=sharing" class="item-folio__project-link" title="Google Drive" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
@@ -906,8 +906,8 @@
                     <strong>CSS3</strong>
                     </li>
                     <li>
-                    <div class="progress percent70"><span>60%</span></div>
-                    <strong>KQL</strong>
+                    <div class="progress percent70"><span>40%</span></div>
+                    <strong>Java Script</strong>
                     </li>
                     <li>
                     <div class="progress percent95"><span>65%</span></div>
@@ -919,7 +919,7 @@
                     </li>
                     <li>
                     <div class="progress percent90"><span>65%</span></div>
-                    <strong>Command Prompt CMD</strong>
+                    <strong>KQL</strong>
                     </li>
                 </ul>
 
