--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                                 <img src="images\portfolio\gallery\(ISC)² Candidate.png" 
                                      srcset="images\portfolio\gallery\(ISC)² Candidate.png 1x, images\portfolio\gallery\(ISC)² Candidate.png 2x" alt="">
                             </a>    
-                            <a href="https://www.behance.net/" class="item-folio__project-link" title="Credly" target="_blank"></a>
+                            <a href="https://www.credly.com/badges/fe5193b0-a139-4883-9e22-9adf45da5132/public_url" class="item-folio__project-link" title="Credly" target="_blank"></a>
                         </div>
     
                         <div class="item-folio__text">
@@ -660,7 +660,7 @@
                         </div>
     
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>This badge was issued to Samson Letsoalo on October 30, 2022 Expires on October 31, 2023.</p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
@@ -672,7 +672,7 @@
                                 <img src="images\portfolio\gallery\(ISC)² CC.png" 
                                      srcset="images\portfolio\gallery\(ISC)² CC.png 1x, images\portfolio\gallery\(ISC)² CC.png 2x" alt="">
                             </a>
-                            <a href="https://www.behance.net/" class="item-folio__project-link" title="Credly" target="_blank"></a>
+                            <a href="https://www.credly.com/badges/50d7bb98-21f1-44db-9bda-3a0596e02f53/public_url" class="item-folio__project-link" title="Credly" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
@@ -683,7 +683,7 @@
                             </p>
                         </div>
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>This badge was issued to Samson Matome Letsoalo on February 02, 2023 Expires on February 28, 2026.</p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
