--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@
                                Qualys Certified Specialist<br>
                             </h4>
                             <p class="item-folio__cat">
-                                Vunerability Managment Detection & Response
+                                Vulnerability Managment Detection & Response
                             </p>
                         </div>
                         <div class="item-folio__caption">
