--- a/index.html
+++ b/index.html
@@ -832,6 +832,33 @@
                     </div>
                 </div> <!-- end masonry__brick -->
 
+<div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                            
+                        <div class="item-folio__thumb">
+                            <a href="images\portfolio\gallery\NSE 3.png" class="thumb-link" title="Palmeira" data-size="1050x700">
+                                <img src="images\portfolio\gallery\NSE 3.png"
+                                     srcset="images\portfolio\gallery\NSE 3.png 1x, images\portfolio\gallery\NSE 3.png 2x" alt="">
+                            </a>
+                            <a href="https://drive.google.com/file/d/1bIkTx2foMKWZcN7F5DFs05mUTptx_HQn/view?usp=sharing" class="item-folio__project-link" title="Google Drive" target="_blank"></a>
+                        </div>
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                               Fortinet Network Security Associate<br>
+                            </h4>
+                            <p class="item-folio__cat">
+                                NSE 3  
+
+                            </p>
+                        </div>
+                        <div class="item-folio__caption">
+                            <p>This badge was issued to Samson Matome Letsoalo on September 18, 2023  Expires on September 18, 2025.</p>
+                        </div>
+                    </div>
+                </div> <!-- end masonry__brick -->
+
+
+
 
                  <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
